UNSTABLE MERGE 2 (now more stable)

--- a/localisation/english/replace/zz_evolved_ethics_authorities_l_english.yml
+++ b/localisation/english/replace/zz_evolved_ethics_authorities_l_english.yml
@@ -93,38 +93,39 @@
 	auth_tec_ai_corporate_desc:0 "This mega-corporation is not directly governed by a corp of CEOs or business heads, but overseen and tracked by a super efficient Artificial Intelligence, which use a part of the transactional network as its computing network, controlling each economic and vital aspects of the citizens and administration; Several bureaucrats and technocrats are assigned based on performance rate to suit the main roles on sub-administrative systems, always constantly surveyed by the core processor."
 	TEC_AUTH_AI_CORPORATE_TYPES: "['concept_tec_authority_type_ai_auth'], ['concept_tec_authority_type_corporate_type']\n"
 
-	auth_tec_hive_biological:0 "Biological Swarm"
-	auth_tec_hive_biological_desc:0 "This Collective Consciousness is formed by the unification of a series of several specialized subspecies under a same mind, genetic data and function, with a higher focus on biological evolution than technological development ;Each drone is an extension of the main consciousness, living and thinking cells of a bigger and expanding body, serving a pre-defined purpose since they are created and until they expire."
-	TEC_AUTH_TEC_HIVE_BIOLOGICAL_TYPES: "['concept_tec_authority_type_gestalt'], ['concept_tec_authority_type_hive_type']\n"
-	AUTH_TEC_HIVE_BIO_DIFF_SET:0 "§RAUTHORITY TEMPORARILY DISABLED§! §EThis authority changes gameplay and building visual and effect sets.§!\n\n"
-	AUTH_TEC_HIVE_BIO_PRODUCTION_BONUS:0 "§EAssembly Bonus:§! £building£ Swarm Capitals provide £mod_pop_growth_speed£ +§G2§!	Organic assembly.\n"
-	AUTH_TEC_HIVE_BIO_DISTRICT_BONUS:0 "§EDistrict Bonus:§! Each §H£district£ Menial District§! provides §H1 extra £job£ Job§!.\n"
-	AUTH_TEC_HIVE_BIO_BUILDING_BONUS:0 "§ESpecific Mechanic:§! £building£ Buildings have a shared cost of $tec_loc_food$ and $tec_loc_minerals$, and have Food upkeep.\n"
-	#Can create £building£ §YBiomass Germinators§! which boost the planet $tec_loc_food$ production and converts £minerals£ £energy£ other resources into food.\n
-	AUTH_TEC_HIVE_BIO_ONLY_SPAWNING_POOLS:0 "§ERestriction:§! Can only breed and assemble £mod_pop_growth_speed£ §HOrganic Drones§!.\n"
-	AUTH_TEC_HIVE_BIO_FOREIGN_POP_SURVIVAL:1 "§ERestriction:§! Non-§HHive Mind§! £pop£ Pops must be assimilated, enslaved or purged, if not §Hempathic§!.\n"
-	AUTH_TEC_HIVE_BIO_AP_PATHS:1 "§ERestriction:§! Following a §HCybernetic§! or §HReplicant§! ascension path will replace this authority."
-
-
+	# Hives
 	auth_hive_mind:0 "Hive Mind"
 	auth_hive_mind_desc:1 "Hive Minds operate as a single organism more than as a state. The population has no free will, and act as an extension of the Hive Mind itself - much like the limbs of a body.\n\nWhen cut off from the Mind, these drones become comatose and eventually wither and die. Any free individuals on planets owned by the Mind are driven away, killed, or simply treated as prey to feed the collective."
 	TEC_AUTH_HIVE_MIND_TYPES: "['concept_tec_authority_type_gestalt'], ['concept_tec_authority_type_hive_type']\n"
-	AUTH_HIVE_MIND_NEW_DISTRICT_BONUS:0 "§EDistrict Bonus:§! Each §H£district£ Menial District§! provides §H1 extra £job£ Job§!.\n\n"
+	AUTH_HIVE_MIND_NEW_DISTRICT_BONUS:0 "§EDistrict Bonus:§! Each §H£district£ Menial District§! provides §G+1§! extra £job£ Job.\n\n"
 	AUTH_HIVE_MIND_NEW_PRODUCTION_BONUS:0 "§EProduction Bonus:§! £unity£ §HUnity§! drones provide extra £amenities_no_happiness£ §HAmenities§! and £amenities_no_happiness£ §HAmenities§!.\n\n"
 	#Authorities changes
 	AUTH_HIVE_MIND_DISTRICT_BONUS:0 "§EDistrict Bonus:§! Each §H£district£ Menial District§! provides §H1 extra £job£ Job§!.\n\n"
-	AUTH_HIVE_MIND_PRODUCTION_BONUS:0 "§EProduction Bonus:§! Each £unity£ §HUnity§! drone provides +§H1§!% Menial drone Output.\n\n"
+	AUTH_HIVE_MIND_PRODUCTION_BONUS:0 "§EProduction Bonus:§! Each £unity£ §HUnity§! drone provides §G+1%§! Menial Drone Output.\n\n"
 
 	auth_tec_hive_cybernetic:0 "Cybernetic Collective"
 	auth_tec_hive_cybernetic_desc:0 "This collective consciousness was formed the moment a cybernetically interconnected network of billions of individuals minds became self aware, developing rudimentary cybernetic implants which ended up transforming the whole species and reshaping its society into a single unique organism of flesh and steel; their desire now is to expand their gift, and resisting it is futile."
 	TEC_AUTH_TEC_HIVE_CYBERNETIC_TYPES: "['concept_tec_authority_type_gestalt'], ['concept_tec_authority_type_hive_type']\n"
 	AUTH_TEC_HIVE_CYB_DIFF_SET:0 "§EThis authority changes gameplay and building visual and effect sets.§!\n\n"
-	AUTH_TEC_HIVE_CYB_TRAIT_BONUS:0 "§EBonus trait:§! £pops£ Pops will gain the §H$trait_hive_mind$§! and §H$trait_cybernetic$§! Traits.\nCyborg pops exchange part of their §Eupkeep§! for §Y$tec_loc_energy$§! upkeep.\nAllows the §Yassimilation§! of sentient biological organisms, becoming new drones of the collective.\n\n"
+	AUTH_TEC_HIVE_CYB_TRAIT_BONUS:0 "§EBonus trait:§! £pops£ Pops will gain the §H$trait_hive_mind$§! and §H$trait_cybernetic$§! Traits.\nCyborg pops exchange part of their §Eupkeep§! for §Y$tec_loc_energy$§! upkeep.\nAllows the §YAssimilation§! of sentient biological organisms, becoming new drones of the collective.\n\n"
 	AUTH_TEC_HIVE_CYB_PRODUCTION_BONUS:0 "§EProduction Bonus:§! Each £unity£ §HUnity§! drone provides +§H1§!% Menial drone Output.\n"
 	#"§EProduction Mechanic:§! £pops£ Jobs are §EMore effective§! on planets with the £stability£ §YSame Designation§!.\n\n"
-	AUTH_TEC_HIVE_CYB_FOREIGN_POP_SURVIVAL:1 "§ERestriction:§! Non-§HHive Mind§! £pop£ Pops must be assimilated, enslaved or purged, if not §Hempathic§!.\n"
-	AUTH_TEC_HIVE_CYB_NO_SPAWNING_POOLS:1 "§ERestriction:§! Forbids the use of £mod_pop_growth_speed£ §HSpawning Pools§!. Robotic Technologies have §Hhigher§! chance of being drawn.\n"
+	AUTH_TEC_HIVE_CYB_FOREIGN_POP_SURVIVAL:1 "§ERestriction:§! Non-§HHive Mind§! £pop£ Pops must be assimilated, enslaved or purged, if not §HEmpathic§!.\n"
+	AUTH_TEC_HIVE_CYB_NO_SPAWNING_POOLS:1 "§ERestriction:§! Forbids the use of £mod_pop_growth_speed£ §HSpawning Pools§!. Robotic Technologies have §HHigher§! chance of being drawn.\n"
 	AUTH_TEC_HIVE_CYB_AP_PATHS:1 "§ERestriction:§! Following a §HBiological§! or §HReplicant§! ascension path will give the option to replace this authority."
+
+	auth_tec_hive_biological:0 "Biological Swarm"
+	auth_tec_hive_biological_desc:0 "This Collective Consciousness is formed by the unification of a series of several specialized subspecies under a same mind, genetic data and function, with a higher focus on biological evolution than technological development ;Each drone is an extension of the main consciousness, living and thinking cells of a bigger and expanding body, serving a pre-defined purpose since they are created and until they expire."
+	TEC_AUTH_TEC_HIVE_BIOLOGICAL_TYPES: "['concept_tec_authority_type_gestalt'], ['concept_tec_authority_type_hive_type']\n"
+	AUTH_TEC_HIVE_BIO_DIFF_SET:0 "§RAUTHORITY TEMPORARILY DISABLED§! §EThis authority changes gameplay and building visual and effect sets.§!\n\n"
+	AUTH_TEC_HIVE_BIO_PRODUCTION_BONUS:0 "§EBonus Mechanic:§! Regular planets will have a £planet£ Hive-World district set and a special hive $tec_loc_district$, without Hive-World bonuses.\n"
+	# £building£ Swarm Capitals provide £mod_pop_growth_speed£ +§G2§!	Organic assembly.
+	AUTH_TEC_HIVE_BIO_DISTRICT_BONUS:0 "§EDistrict Bonus:§! Each §H£district£ Menial District§! provides §G+1§! extra £job£ Job.\n"
+	AUTH_TEC_HIVE_BIO_BUILDING_BONUS:0 "§EEconomy Mechanic:§! $tec_loc_districts$ and $tec_loc_buildings$ have a shared cost of $tec_loc_food$ and $tec_loc_minerals$, and have Food upkeep.\n"
+	#Can create £building£ §YBiomass Germinators§! which boost the planet $tec_loc_food$ production and converts £minerals£ £energy£ other resources into food.\n
+	AUTH_TEC_HIVE_BIO_ONLY_SPAWNING_POOLS:0 "§ERestriction:§! Can only breed and assemble £mod_pop_growth_speed£ §HOrganic Drones§!.\n"
+	AUTH_TEC_HIVE_BIO_FOREIGN_POP_SURVIVAL:1 "§ERestriction:§! Non-§HHive Mind§! £pop£ Pops must be assimilated, enslaved or purged, if not §HEmpathic§!.\n"
+	AUTH_TEC_HIVE_BIO_AP_PATHS:1 "§ERestriction:§! Following a §HCybernetic§! or §HReplicant§! ascension path will replace this authority."
 
 	auth_machine_intelligence:0 "Machine Intelligence"
 	auth_machine_intelligence_desc:1 "Machine Intelligences are immense artificial group minds that have been networked into a single conscious entity. Most of the actual ''population'' in such an empire consists of mindless work units who perform their designated tasks without any semblance of free will.\n\nA small number of semi-autonomous agents are typically employed for more specialized tasks that benefit from some degree of independent initiative."
