--- a/localisation/english/replace/zz_evolved_replace_l_english.yml
+++ b/localisation/english/replace/zz_evolved_replace_l_english.yml
@@ -1,5 +1,10 @@
 ﻿l_english:
 
+# MISC replaces
+# ------------------------------------------------------------
+ BRANCH_OFFICE_BUILDING:0 "Holding Building"
+ BRANCH_OFFICE_BUILDINGS:0 "Holding Buildings"
+
 # ORIGIN replaces
 # ------------------------------------------------------------
 
@@ -150,7 +155,7 @@
 # ------------------------------------------------------------
 	decision_arcology_project_requirements:0 "£trigger_no£ §RAll district slots on the planet must be filled with§! £district£ §YHousing Districts§!, §Y$district_industrial_plural$§! or at least 3 fully upgraded £building£ §Y$building_tec_megacity_plural$§!."
 
-	decision_tec_arcology_blocker_tweaks:0 "£trigger_no£ §RRequires NO £blocker£ Blockers on the planet, unless the empire is able to §YOverstrip§! resources."
+	decision_tec_arcology_blocker_tweaks:0 "£trigger_no£ §RRequires NO £blocker£ Blockers on the planet, unless the empire has a deep affinity with $tec_loc_natural_blockers$ is able to §Y£blocker£ Overstrip§! resources."
 
 	decision_tec_ecoarcology_blocker_tweaks:0 "£trigger_no£ §RRequires NO £blocker£ Blockers on the planet, unless the empire §YBenefits§! from them."
 
