fixes + robot portraits added

--- a/localisation/english/replace/zz_evolved_districts_and_features_l_english.yml
+++ b/localisation/english/replace/zz_evolved_districts_and_features_l_english.yml
@@ -312,6 +312,15 @@ l_english:
 		mod_district_tec_biohive_assembly_max:0 "Max $district_tec_biohive_assembly_plural$"
 		district_tec_biohive_assembly_desc:0 "$district_tec_hive_world_assembly_desc$"
 
+			job_tec_hive_incubator:0 "Incubator Drone"
+			job_tec_hive_incubator_plural:0 "Incubator Drones"
+			job_tec_hive_incubator_desc:0 "These drones oversee and serve as caretakers of the new life of the collective."
+			job_tec_hive_incubator_effect_desc:0 "£job_tec_hive_incubator£ $job_tec_hive_incubator_plural$ generate §Y$tec_loc_energy$§!."
+			job_tec_hive_incubator_effect_nocheese_desc:0 "£job_tec_hive_incubator£ $job_tec_hive_incubator_plural$ generate §Y$tec_loc_energy$§!."
+			mod_job_tec_hive_incubator_add:0 "$job_tec_hive_incubator$ Jobs"
+			mod_job_tec_hive_incubator_per_pop:0 "§G+1§! $job_tec_hive_incubator$ Job per $VALUE$ Pops"
+			mod_job_tec_hive_incubator_per_pop_short:0 "\n§G+1§! £mod_job_tec_hive_incubator_add£ per $VALUE$ £pop£"
+
 		district_tec_biohive_industrial:0 "$district_tec_hive_world_industrial$"
 		district_tec_biohive_industrial_plural:0 "$district_tec_hive_world_industrial_plural$"
 		district_tec_biohive_industrial_desc:0 "$district_tec_hive_world_industrial_desc$"
