--- a/localisation/english/replace/zz_evolved_ethics_authorities_l_english.yml
+++ b/localisation/english/replace/zz_evolved_ethics_authorities_l_english.yml
@@ -117,8 +117,8 @@
 	auth_tec_hive_biological:0 "Biological Swarm"
 	auth_tec_hive_biological_desc:0 "This Collective Consciousness is formed by the unification of a series of several specialized subspecies under a same mind, genetic data and function, with a higher focus on biological evolution than technological development ;Each drone is an extension of the main consciousness, living and thinking cells of a bigger and expanding body, serving a pre-defined purpose since they are created and until they expire."
 	TEC_AUTH_TEC_HIVE_BIOLOGICAL_TYPES: "['concept_tec_authority_type_gestalt'], ['concept_tec_authority_type_hive_type']\n"
-	AUTH_TEC_HIVE_BIO_DIFF_SET:0 "§RAUTHORITY TEMPORARILY DISABLED§! §EThis authority changes gameplay and building visual and effect sets.§!\n\n"
-	AUTH_TEC_HIVE_BIO_PRODUCTION_BONUS:0 "§EBonus Mechanic:§! Regular planets will have a £planet£ Hive-World district set and a special hive $tec_loc_district$, without Hive-World bonuses.\n"
+	AUTH_TEC_HIVE_BIO_DIFF_SET:0 "§EThis authority changes gameplay and building visual and effect sets.§!\n\n"
+	AUTH_TEC_HIVE_BIO_PRODUCTION_BONUS:0 "§EBonus Mechanic:§! Regular planets will have a special §Y£planet£ Organic§! District and Building set, and an unique §Y$tec_loc_organic_assembly$ District§!.\n"
 	# £building£ Swarm Capitals provide £mod_pop_growth_speed£ +§G2§!	Organic assembly.
 	AUTH_TEC_HIVE_BIO_DISTRICT_BONUS:0 "§EDistrict Bonus:§! Each §H£district£ Menial District§! provides §G+1§! extra £job£ Job.\n"
 	AUTH_TEC_HIVE_BIO_BUILDING_BONUS:0 "§EEconomy Mechanic:§! $tec_loc_districts$ and $tec_loc_buildings$ have a shared cost of $tec_loc_food$ and $tec_loc_minerals$, and have Food upkeep.\n"
@@ -126,6 +126,12 @@
 	AUTH_TEC_HIVE_BIO_ONLY_SPAWNING_POOLS:0 "§ERestriction:§! Can only breed and assemble £mod_pop_growth_speed£ §HOrganic Drones§!.\n"
 	AUTH_TEC_HIVE_BIO_FOREIGN_POP_SURVIVAL:1 "§ERestriction:§! Non-§HHive Mind§! £pop£ Pops must be assimilated, enslaved or purged, if not §HEmpathic§!.\n"
 	AUTH_TEC_HIVE_BIO_AP_PATHS:1 "§ERestriction:§! Following a §HCybernetic§! or §HReplicant§! ascension path will replace this authority."
+
+
+	auth_tec_hive_biomechanical:0 "Biomechanical Simulants"
+	auth_tec_hive_biomechanical_desc:0 "What did you expect here?"
+
+
 
 	auth_machine_intelligence:0 "Machine Intelligence"
 	auth_machine_intelligence_desc:1 "Machine Intelligences are immense artificial group minds that have been networked into a single conscious entity. Most of the actual ''population'' in such an empire consists of mindless work units who perform their designated tasks without any semblance of free will.\n\nA small number of semi-autonomous agents are typically employed for more specialized tasks that benefit from some degree of independent initiative."
