--- a/localisation/english/replace/zz_evolved_traits_l_english.yml
+++ b/localisation/english/replace/zz_evolved_traits_l_english.yml
@@ -1,7 +1,7 @@
 ﻿l_english:
 
 # ------------------------------------------------- Vanilla replace
- TRAIT_INVASIVE_EFFECT: "§EPer §YNon-Plantoid §RNegative§!§! trait selected:§!\n - Habitability, Growth and Assembly: §G+5%§!\n\n§EPer §YNon-Plantoid §GPositive§!§! trait selected:§!\n - Habitability, Growth and Assembly: §R-2.5%§!"
+ TRAIT_INVASIVE_EFFECT: "§EPer §YNon-Plantoid §RNegative§!§! trait selected:§!\n - Habitability, Growth and Assembly: §G+5%§!\n\n§EPer §YNon-Plantoid §GPositive§!§! trait selected:§!\n - Habitability, Growth and Assembly: §R-2.5%§!\n\n§EPlantoid traits count as negative traits, providing bonuses§!"
 	#OLD_TRAIT_INVASIVE_EFFECT: "§YCan only select negative or botanical traits§!\n\nHabitability: §G+5%§! for each negative trait selected\nPop Growth Speed: §G+5%§! for each negative trait selected"
 
 # /
