moved district vars to vars file

--- a/localisation/english/replace/zz_evolved_civics_l_english.yml
+++ b/localisation/english/replace/zz_evolved_civics_l_english.yml
@@ -530,8 +530,12 @@
 
  # Egalitarian
 
- # Egalitarian
+ # Other
 
+	civic_tec_regular_exemplars:0 "§G£tec_civic_ruler£§!Exemplary Governance"
+	civic_tec_regular_exemplars_desc:0 "['concept_tec_ruler_replace_civic']\n\nTO DO."
+	civic_tec_regular_exemplars_tooltip:0 "TO DO £building£ Capital Buildings replace some £job_politician£ §Y$job_politician$§! Jobs with £job_tec_exemplar£ §Y$job_tec_exemplar_plural$§!.\n- $job_tec_procurator_effect_desc$\n\n"
+	# Exemplars change production based on planet designation
 # /
  
 # Ruler Add Civics
@@ -1360,7 +1364,7 @@
 
 	civic_tec_regular_quantum_alloys:0 "§P£tec_civic_job£§!Quantic Forging"
 	civic_tec_regular_quantum_alloys_desc:0 "['concept_tec_job_alteration_civics_foundry']\n\nThe use of quantum entanglement techniques during alloy refining processes provides superdense and efficient alloys, hyper-bonded at a sub-atomic level, by applying intense amounts of energy."
-	civic_tec_regular_quantum_alloys_tooltip:0 "$tec_loc_c_unlocks_feature$ §H£alloys£ Quantic Compression§!\n['concept_tec_specialist_job_foundry_plural_icon'] swap half their §Y$tec_loc_minerals$§! upkeep with §Y$tec_loc_energy$§!.\n\n$tec_loc_c_unlocks_feature$ §H£energy£ Electric Overcharge§!\n£building£ §Y$building_energy_grid$s§! increase the output of §Y£job_foundry£ Foundry§! jobs by §G5%§! per §Y£physics£ Energy Production Technology§! researched (such as $tech_power_plant_2$), up to §G20%§!, based on the building upgrade, increased by §Y$tec_loc_planet_ascension_plural$§!.\n§HThis production bonus is disabled when a similar civic alloy-boosting building (such as £building£ Coordinated Fulfillment Center) is present.§!\n\n$tec_loc_c_initial_pick$ §H£energy£ Grid Connectivity§!\nProvides the §Y£physics£ $tech_tec_energy_plant$§! Technology."
+	civic_tec_regular_quantum_alloys_tooltip:0 "$tec_loc_c_unlocks_feature$ §H£alloys£ Quantic Compression§!\n['concept_tec_specialist_job_foundry_plural_icon'] swap all their §Y$tec_loc_minerals$§! upkeep with §Y$tec_loc_energy$§!.\n\n$tec_loc_c_unlocks_feature$ §H£energy£ Electric Overcharge§!\n£building£ §Y$building_energy_grid$s§! increase the output of §Y£job_foundry£ Foundry§! jobs by §G5%§! per §Y£physics£ Energy Production Technology§! researched (such as $tech_power_plant_2$), up to §G20%§!, based on the building upgrade, increased by §Y$tec_loc_planet_ascension_plural$§!.\n§HThis production bonus is disabled when a similar civic alloy-boosting building (such as £building£ Coordinated Fulfillment Center) is present.§!\n\n$tec_loc_c_initial_pick$ §H£energy£ Grid Connectivity§!\nProvides the §Y£physics£ $tech_tec_energy_plant$§! Technology."
 	#OLD_civic_tec_regular_quantum_alloys_tooltip:0 "['concept_tec_job_foundry_quantum_plural_icon'] swap half their §Y$tec_loc_minerals$§! upkeep with §Y$tec_loc_energy$§!.\n$mod_base_planet_metallurgists$ Output from $mod_base_planet_technician$: §G+1%§!\n\n§HThis production bonus is disabled when a similar civic alloy-boosting building (such as £building£ Coordinated Fulfillment Center) is present.§!\n"
 
 	civic_tec_corporate_quantum_alloys:0 "§P£tec_civic_job£§!Quantic Alloy-Profiteering"
@@ -1369,11 +1373,11 @@
 
 	civic_tec_hive_quantum_alloys:0 "§P£tec_civic_job£§!Quantic Moulding"
 	civic_tec_hive_quantum_alloys_desc:0 "$civic_tec_regular_quantum_alloys_desc$"
-	civic_tec_hive_quantum_alloys_tooltip:0 "$tec_loc_c_unlocks_feature$ §H£alloys£ Quantic Compression§!\n['concept_tec_specialist_job_alloy_drone_plural_icon'] swap half their §Y$tec_loc_minerals$§! upkeep with §Y$tec_loc_energy$§!.\n\n$tec_loc_c_unlocks_feature$ §H£energy£ Electric Overcharge§!\n£building£ §Y$building_energy_grid$s§! increase the output of §Y£job_foundry£ Foundry§! jobs by §G5%§! per §Y£physics£ Energy Production Technology§! researched (such as $tech_power_plant_2$), up to §G20%§!, based on the building upgrade, increased by §Y$tec_loc_planet_ascension_plural$§!.\n§HThis production bonus is disabled when a similar civic alloy-boosting building (such as £building£ Coordinated Fulfillment Center) is present.§!\n\n$tec_loc_c_initial_pick$ §H£energy£ Grid Connectivity§!\nProvides the §Y£physics£ $tech_tec_energy_plant$§! Technology."
+	civic_tec_hive_quantum_alloys_tooltip:0 "$tec_loc_c_unlocks_feature$ §H£alloys£ Quantic Compression§!\n['concept_tec_specialist_job_alloy_drone_plural_icon'] swap all their §Y$tec_loc_minerals$§! upkeep with §Y$tec_loc_energy$§!.\n\n$tec_loc_c_unlocks_feature$ §H£energy£ Electric Overcharge§!\n£building£ §Y$building_energy_grid$s§! increase the output of §Y£job_foundry£ Foundry§! jobs by §G5%§! per §Y£physics£ Energy Production Technology§! researched (such as $tech_power_plant_2$), up to §G20%§!, based on the building upgrade, increased by §Y$tec_loc_planet_ascension_plural$§!.\n§HThis production bonus is disabled when a similar civic alloy-boosting building (such as £building£ Coordinated Fulfillment Center) is present.§!\n\n$tec_loc_c_initial_pick$ §H£energy£ Grid Connectivity§!\nProvides the §Y£physics£ $tech_tec_energy_plant$§! Technology."
 
 	civic_tec_machine_quantum_alloys:0 "§P£tec_civic_job£§!Quantic Meta-Fabrication"
 	civic_tec_machine_quantum_alloys_desc:0 "$civic_tec_regular_quantum_alloys_desc$"
-	civic_tec_machine_quantum_alloys_tooltip:0 "$tec_loc_c_unlocks_feature$ §H£alloys£ Quantic Compression§!\n['concept_tec_specialist_job_fabricator_plural_icon'] swap half their §Y$tec_loc_minerals$§! upkeep with §Y$tec_loc_energy$§!.\n\n$tec_loc_c_unlocks_feature$ §H£energy£ Electric Overcharge§!\n£building£ §Y$building_energy_grid$s§! increase the output of §Y£job_foundry£ Foundry§! jobs by §G5%§! per §Y£physics£ Energy Production Technology§! researched (such as $tech_power_plant_2$), up to §G20%§!, based on the building upgrade, increased by §Y$tec_loc_planet_ascension_plural$§!.\n§HThis production bonus is disabled when a similar civic alloy-boosting building (such as £building£ Coordinated Fulfillment Center) is present.§!\n\n$tec_loc_c_initial_pick$ §H£energy£ Grid Connectivity§!\nProvides the §Y£physics£ $tech_tec_energy_plant$§! Technology."
+	civic_tec_machine_quantum_alloys_tooltip:0 "$tec_loc_c_unlocks_feature$ §H£alloys£ Quantic Compression§!\n['concept_tec_specialist_job_fabricator_plural_icon'] swap all their §Y$tec_loc_minerals$§! upkeep with §Y$tec_loc_energy$§!.\n\n$tec_loc_c_unlocks_feature$ §H£energy£ Electric Overcharge§!\n£building£ §Y$building_energy_grid$s§! increase the output of §Y£job_foundry£ Foundry§! jobs by §G5%§! per §Y£physics£ Energy Production Technology§! researched (such as $tech_power_plant_2$), up to §G20%§!, based on the building upgrade, increased by §Y$tec_loc_planet_ascension_plural$§!.\n§HThis production bonus is disabled when a similar civic alloy-boosting building (such as £building£ Coordinated Fulfillment Center) is present.§!\n\n$tec_loc_c_initial_pick$ §H£energy£ Grid Connectivity§!\nProvides the §Y£physics£ $tech_tec_energy_plant$§! Technology."
 
  # former civic_labour_unions
 	civic_tec_regular_labour_unions:0 "§P£tec_civic_job£§!Labour Unions"
