Resource district cost standardization (ON TEST!!)

--- a/localisation/english/replace/zz_evolved_buildings_and_jobs_l_english.yml
+++ b/localisation/english/replace/zz_evolved_buildings_and_jobs_l_english.yml
@@ -933,8 +933,16 @@ l_english:
 	mod_job_tec_master_tinker_per_pop_short:0 "\n§G+1§! £mod_job_tec_master_tinker_add£ per $VALUE$ £pop£"
 	mod_job_tec_master_tinker_add:0 "$job_tec_master_tinker$ Jobs"
 
+	job_tec_exemplar:0 "Exemplar"
+	job_tec_exemplar_plural:0 "Exemplars"
+	job_tec_exemplar_desc:0 "TO DO."
+	job_tec_exemplar_effect_desc:0 "£job_tec_exemplar£ $job_tec_exemplar_plural$ generates §Y$tec_loc_unity$§!, §Y$tec_loc_amenities$§! and TO DO."
+	mod_job_tec_exemplar_per_pop:0 "§G+1§! $job_tec_exemplar$ Job Per $VALUE$ Pops"
+	mod_job_tec_exemplar_per_pop_short:0 "\n§G+1§! £mod_job_tec_exemplar_add£ per $VALUE$ £pop£"
+	mod_job_tec_exemplar_add:0 "$job_tec_exemplar$ Jobs"
+
 	job_tec_procurator:0 "Procurator"
-	job_tec_procurator_plural:0 "Procurator"
+	job_tec_procurator_plural:0 "Procurators"
 	job_tec_procurator_desc:0 "Cultivated law enforcers and administrative who dedicate all its life and time to ensure the equity of resources, production and assets are distributed to the society in a way everyone has equal access to any good."
 	job_tec_procurator_effect_desc:0 "£job_tec_procurator£ $job_tec_procurator_plural$ generates §Y$tec_loc_unity$§!, §Y$tec_loc_amenities$§! and increase £job£ §YJobs Output§! and £job£ §RJobs Upkeep§!."
 	mod_job_tec_procurator_per_pop:0 "§G+1§! $job_tec_procurator$ Job Per $VALUE$ Pops"
