--- a/localisation/english/replace/zz_evolved_civics_l_english.yml
+++ b/localisation/english/replace/zz_evolved_civics_l_english.yml
@@ -531,10 +531,9 @@
  # Egalitarian
 
  # Other
-
 	civic_tec_regular_exemplars:0 "§G£tec_civic_ruler£§!Exemplary Governance"
 	civic_tec_regular_exemplars_desc:0 "['concept_tec_ruler_replace_civic']\n\nTO DO."
-	civic_tec_regular_exemplars_tooltip:0 "TO DO £building£ Capital Buildings replace some £job_politician£ §Y$job_politician$§! Jobs with £job_tec_exemplar£ §Y$job_tec_exemplar_plural$§!.\n- $job_tec_procurator_effect_desc$\n\n"
+	civic_tec_regular_exemplars_tooltip:0 "$tec_loc_c_ruler_swap$ §H£job_tec_exemplar£ $job_tec_exemplar_plural$§!\n£building£ Capital Buildings replace §YAll§! their ['concept_tec_ruler_job_standard_plural_icon'] with ['concept_tec_ruler_job_tec_exemplar_plural_icon'].\n\n$tec_loc_c_unlocks_feature$ §H£job£ Leading the Example§!\n£building£ TO DO provide extra £job_tec_exemplar£ §Y$job_tec_exemplar_plural$§!, increased by §Y$tec_loc_planet_ascension_plural$§!."
 	# Exemplars change production based on planet designation
 # /
  
