--- a/localisation/english/replace/zz_evolved_traits_l_english.yml
+++ b/localisation/english/replace/zz_evolved_traits_l_english.yml
@@ -612,6 +612,17 @@
 	tec_trait_tec_biogenic_main_mutation:0 "Mutation:\n"
 	tec_trait_tec_biogenic_main_evolution:0 "Forced Evolution:\n"
 
+	# Ascension related
+		trait_tec_biogenic_psi:0 "Psychic Symbiote"
+		trait_tec_biogenic_psi_desc:0 "§LTo do§!"
+
+		trait_tec_biogenic_cyb:0 "TO DO"
+		trait_tec_biogenic_cyb_desc:0 "§LTo do§!"
+
+		trait_tec_biogenic_gene:0 "TO DO"
+		trait_tec_biogenic_gene_desc:0 "§LTo do§!"
+	# /
+
 	trait_tec_biogenic_exoskeleton:0 "Xenoskeleton"
 	trait_tec_biogenic_exoskeleton_desc:0 "§LTo do§!"
 
