--- a/localisation/english/zz_evolved_concepts_l_english.yml
+++ b/localisation/english/zz_evolved_concepts_l_english.yml
@@ -412,6 +412,13 @@
 	concept_tec_ruler_job_noble_plural_icon: "£job_noble£ $job_noble_plural$"
 	concept_tec_ruler_job_noble_desc: "§L$job_noble_desc$§!\n\n$job_noble_effect_desc$\n\n$tec_loc_c_stratum$: §Y$pop_cat_ruler$§!\n$tec_loc_c_eco_cat$: ['concept_tec_eco_planet_nobles_alias']\n\n$tec_loc_amenities$: §G+3§!\n$tec_loc_stability$: §G+4§!\n$tec_loc_c_produces$: §Y£unity£ 6§!\n$tec_loc_c_upkeep$: §Y£consumer_goods£ 2§!"
 
+	concept_tec_ruler_job_tec_exemplar: "$job_tec_exemplar$"
+	concept_tec_ruler_job_tec_exemplar_alias: "$job_tec_exemplar$"
+	concept_tec_ruler_job_tec_exemplar_icon: "£job_tec_exemplar£ $job_tec_exemplar$"
+	concept_tec_ruler_job_tec_exemplar_plural: "$job_tec_exemplar_plural$"
+	concept_tec_ruler_job_tec_exemplar_plural_icon: "£job_tec_exemplar£ $job_tec_exemplar_plural$"
+	concept_tec_ruler_job_tec_exemplar_desc: "§L$job_tec_exemplar_desc$§!\n\n$job_tec_exemplar_effect_desc$\n\n$tec_loc_c_stratum$: §Y$pop_cat_ruler$§!\n$tec_loc_c_produces$:\n\n"
+
 	concept_tec_ruler_job_tec_procurator: "$job_tec_procurator$"
 	concept_tec_ruler_job_tec_procurator_alias: "$job_tec_procurator$"
 	concept_tec_ruler_job_tec_procurator_icon: "£job_tec_procurator£ $job_tec_procurator$"
